# HousingMarketAnalysis

./: pyproject.toml
src/: extract.py  geo_utils.py  main.py  plots.py  scraper.py
