[tool.poetry]
name = "housingmarketanalysis"
version = "0.1.0"
description = ""
authors = ["ATayls"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"
geopy = "^2.4.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
